docs: 定义 v1.5 里程碑需求（5 类 31 项）